required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- - Fix mapogcfilter.c not to cause syntax error if PROJ.4 is not compiled in (#2987)

- Rework Python MapScript's setup.py to be more like Python's to fix
  a number of issues including (#2637) and to use mapserver-config 
  and ditch the old mapscriptvars approach

- Prevent from changing the connection type to MS_RASTER when setConnectionType(MS_WMS) is used (#2908)

- Improve rounding logic for computing the src_xoff/yoff (#2976)

- Fix filename path processing for raster queries and WCS get coverage so 
  that non-filesystem filenames are not altered (#2901) 

- Improved security relative to untrusted directories and mapfiles (RFC 56)

- Fixed several security issues found in an audit of the CGI application (#2939, #2941, #2942, #2943, #2944)

- setConnectionType(MS_WMS) doesn't work with mapscript (#2908)

- Perl Mapscript: improvement of imageObj wrapper (#2962)

- Improve control of output resolution (RFC 55, #2948)

- mapraster.c: use GDALOpenShared(), and CLOSE_CONNECTION=DEFERRED (#2815)

- AGG font outline method change (#1243)

- Change mapbit.c bitmask type from char to new 32bit ms_bitarray (#2930)

- Added resolution writing in image files (#2891)

- Try to save resolution values to GeoTIFF via GDAL (#2891)

- Refactor legend icon drawing (remove renderer specific versions)
  Add label styling or markers for annotation layer legend icons (#2917)

- Update EXTENT warning message (#2914)

- add support for SRSNAME parameter (#2899)

- add support for resultType (#2907)

- WFS 1.1.0 should use OWS Common 1.0.0 (#2925)

- clean up GEOS init and cleanup functions (#2929)
